--- a/src/views/pages/course-page.pug
+++ b/src/views/pages/course-page.pug
@@ -201,11 +201,11 @@ block content
 																		tr
 																			td
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-start.fc-end(href='javascript:;' data-title='Семинар Крийя' data-description='This is a simple event, using the Zap Calendar PHP library. This is a simple event, using the Zap Calendar PHP library. This is a simple event, using the Zap Calendar PHP library. This is a simple event, using the Zap Calendar PHP library. ' data-id='3075' data-location='Москва, Красная площадь' data-time='10:20' data-date='01 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/03/home-slider-pic-570x410.jpg' data-permalink='http://ik.q7.by/events/seminar-krijya/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=%D0%A1%D0%B5%D0%BC%D0%B8%D0%BD%D0%B0%D1%80+%D0%9A%D1%80%D0%B8%D0%B9%D1%8F&dates=20210601T102000/20210602T112100&location=%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0%2C+%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%B0%D1%8F+%D0%BF%D0%BB%D0%BE%D1%89%D0%B0%D0%B4%D1%8C&details=This+is+a+simple+event%2C+using+the+Zap+Calendar+PHP+library.+This+is+a+simple+event%2C+using+the+Zap+Calendar+PHP+library.+This+is+a+simple+event%2C+using+the+Zap+Calendar+PHP+library.+This+is+a+simple+event%2C+using+the+Zap+Calendar+PHP+library.+' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3075')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-start.fc-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title.fc-title--red Значимость этих проблем настолько очевидна
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-start.fc-end(href='javascript:;' data-title='3-7' data-description='Краткое описание событие' data-id='3831' data-location='Киев' data-time='12:00' data-date='03 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya-3/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=3-7&dates=20210603T000000/20210714T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3831')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-start.fc-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title.fc-title--red Лекция «Кhbqz
 																			td
@@ -214,7 +214,7 @@ block content
 																		tr
 																			td
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-start.fc-end(href='javascript:;' data-title='Ретрит' data-description='This is a simple event, using the Zap Calendar PHP library. This is a simple event, using the Zap Calendar PHP library. This is a simple event, using the Zap Calendar PHP library. This is a simple event, using the Zap Calendar PHP library. ' data-id='3096' data-location='Москва, Красная площадь' data-time='10:20' data-date='01 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/04/dsc_0998-1-570x360.jpg' data-permalink='http://ik.q7.by/events/retreat/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=%D0%A0%D0%B5%D1%82%D1%80%D0%B8%D1%82&dates=20210601T102000/20210602T112100&location=%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0%2C+%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%B0%D1%8F+%D0%BF%D0%BB%D0%BE%D1%89%D0%B0%D0%B4%D1%8C&details=This+is+a+simple+event%2C+using+the+Zap+Calendar+PHP+library.+This+is+a+simple+event%2C+using+the+Zap+Calendar+PHP+library.+This+is+a+simple+event%2C+using+the+Zap+Calendar+PHP+library.+This+is+a+simple+event%2C+using+the+Zap+Calendar+PHP+library.+' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3096')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-start.fc-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, ut!
 																			td
@@ -262,7 +262,7 @@ block content
 																	tbody
 																		tr
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href='javascript:;' data-title='3-7' data-description='Краткое описание событие' data-id='3831' data-location='Киев' data-time='12:00' data-date='03 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya-3/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=3-7&dates=20210603T000000/20210714T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3831')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title.fc-title--red Ножевой бой
 
@@ -299,13 +299,12 @@ block content
 																	tbody
 																		tr
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href='javascript:;' data-title='3-7' data-description='Краткое описание событие' data-id='3831' data-location='Киев' data-time='12:00' data-date='03 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya-3/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=3-7&dates=20210603T000000/20210714T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3831')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title.fc-title--red Ножевой бой
 																		tr
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href='javascript:;' data-title='мероприятие для отладки календаря 12-26' data-description='Краткое описание событие\
-												  asdsadsadsd' data-id='3820' data-location='Киев' data-time='12:00' data-date='12 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D0%B5+%D0%B4%D0%BB%D1%8F+%D0%BE%D1%82%D0%BB%D0%B0%D0%B4%D0%BA%D0%B8+%D0%BA%D0%B0%D0%BB%D0%B5%D0%BD%D0%B4%D0%B0%D1%80%D1%8F+12-26&dates=20210612T000000/20210626T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5%0D%0Aasdsadsadsd' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3820')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title мероприятие для отладки календаря 12-26
 														.fc-row.fc-week.fc-widget-content
@@ -341,31 +340,28 @@ block content
 																	tbody
 																		tr
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href='javascript:;' data-title='3-7' data-description='Краткое описание событие' data-id='3831' data-location='Киев' data-time='12:00' data-date='03 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya-3/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=3-7&dates=20210603T000000/20210714T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3831')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title.fc-title--red Ножевой бой
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href='javascript:;' data-title='3-7' data-description='Краткое описание событие' data-id='3831' data-location='Киев' data-time='12:00' data-date='03 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya-3/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=3-7&dates=20210603T000000/20210714T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3831')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title.fc-title--red Ножевой бой
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href='javascript:;' data-title='3-7' data-description='Краткое описание событие' data-id='3831' data-location='Киев' data-time='12:00' data-date='03 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya-3/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=3-7&dates=20210603T000000/20210714T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3831')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title.fc-title--red Ножевой бой
 																		tr
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-end(href='javascript:;' data-title='мероприятие для отладки календаря 12-26' data-description='Краткое описание событие\
-												  asdsadsadsd' data-id='3820' data-location='Киев' data-time='12:00' data-date='12 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D0%B5+%D0%B4%D0%BB%D1%8F+%D0%BE%D1%82%D0%BB%D0%B0%D0%B4%D0%BA%D0%B8+%D0%BA%D0%B0%D0%BB%D0%B5%D0%BD%D0%B4%D0%B0%D1%80%D1%8F+12-26&dates=20210612T000000/20210626T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5%0D%0Aasdsadsadsd' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3820')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title мероприятие для отладки календаря 12-26
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-end(href='javascript:;' data-title='мероприятие для отладки календаря 12-26' data-description='Краткое описание событие\
-												  asdsadsadsd' data-id='3820' data-location='Киев' data-time='12:00' data-date='12 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D0%B5+%D0%B4%D0%BB%D1%8F+%D0%BE%D1%82%D0%BB%D0%B0%D0%B4%D0%BA%D0%B8+%D0%BA%D0%B0%D0%BB%D0%B5%D0%BD%D0%B4%D0%B0%D1%80%D1%8F+12-26&dates=20210612T000000/20210626T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5%0D%0Aasdsadsadsd' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3820')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title мероприятие для отладки календаря 12-26
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-end(href='javascript:;' data-title='мероприятие для отладки календаря 12-26' data-description='Краткое описание событие\
-												  asdsadsadsd' data-id='3820' data-location='Киев' data-time='12:00' data-date='12 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D0%B5+%D0%B4%D0%BB%D1%8F+%D0%BE%D1%82%D0%BB%D0%B0%D0%B4%D0%BA%D0%B8+%D0%BA%D0%B0%D0%BB%D0%B5%D0%BD%D0%B4%D0%B0%D1%80%D1%8F+12-26&dates=20210612T000000/20210626T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5%0D%0Aasdsadsadsd' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3820')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title мероприятие для отладки календаря 12-26
 																			td
@@ -402,7 +398,7 @@ block content
 																	tbody
 																		tr
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href='javascript:;' data-title='3-7' data-description='Краткое описание событие' data-id='3831' data-location='Киев' data-time='12:00' data-date='03 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya-3/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=3-7&dates=20210603T000000/20210714T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3831')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title.fc-title--red Ножевой бой
 																		tr
@@ -454,7 +450,7 @@ block content
 																	tbody
 																		tr
 																			td.fc-event-container(colspan='1')
-																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href='javascript:;' data-title='3-7' data-description='Краткое описание событие' data-id='3831' data-location='Киев' data-time='12:00' data-date='03 июня' data-img='http://ik.q7.by/wp-content/uploads/2021/06/babaji_square-570x410.jpg' data-permalink='http://ik.q7.by/events/testovoe-meropriyatie-dlya-otladki-kalendarya-3/' data-google='https://www.google.com/calendar/event?action=TEMPLATE&text=3-7&dates=20210603T000000/20210714T000000&location=%D0%9A%D0%B8%D0%B5%D0%B2&details=%D0%9A%D1%80%D0%B0%D1%82%D0%BA%D0%BE%D0%B5+%D0%BE%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5+%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B5' data-apple='/wp-content/themes/imram-kriya-custom/generate-ical.php?post_id=3831')
+																				a.fc-day-grid-event.fc-h-event.fc-event.fc-not-start.fc-not-end(href="" data-fancybox data-src="#dialog-content")
 																					.fc-content
 																						span.fc-title.fc-title--red Ножевой бой
 																		tr
@@ -533,9 +529,34 @@ block content
 							<svg width="11" height="18" viewBox="0 0 11 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M10 1L2 9.00001L10 17" stroke="#CA3232" stroke-width="2" stroke-linecap="round"/>
 							</svg>
+		
+		
+		section#dialog-content.block-content.bg--white.calendar--modal(style='display: none')
+			.calendar__window--close
+				<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M23 23L1 1M1 23L23 1" stroke="#CA3232" stroke-width="2" stroke-linecap="round"/>
+				</svg>
+			.container 
+				.calendar__window
+					.calendar__window--picture
+						img(src="img/calendar--modal--1.png", alt="")
+					.calendar__window__card 
+						.calendar__window__card--title
+							.calendar__window__card--date 30 АПРЕЛЯ
+							.calendar__window__card--time 15:00
+							.calendar__window__card--location подмосковье
+					.calendar__window--title мастер класс мастеров ножевого боя и комплексной самообороны
+					.calendar__window--text Постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по разработке новых предложений. Задача организации,в особенности же укрепление и развитие структуры позволяет оценить значение дальнейших направлений развития.
+					a(href="").calendar__window--button.button ЗАПИСАТЬСЯ
+
+
 						
 
 	include ../../blocks/modules/footer/footer
+
+
+
+
 
 block scripts
 	script(src="js/vendor.js")
