data-fancybox-close

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -607,7 +607,7 @@ block content
 					.instructors__bg.instructors__bg--56
 						img(src="img/instructor--modal--2.png", alt="")
 					.instructors--title.fz__39 ТАКТИКА БОЯ С НОЖОМ
-						.write-review__close
+						.write-review__close(data-fancybox-close)
 							<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M10.57 -0.000150693L11.9794 1.41161L7.40926 5.98964L11.9998 10.5881L10.5904 11.9999L5.99994 7.4014L1.40944 11.9998L0.000113316 10.5881L4.59061 5.98964L0.0205078 1.41162L1.42983 -0.000143541L5.99994 4.57787L10.57 -0.000150693Z" fill="#CA3232"/>
 							</svg>			
