--- a/src/views/pages/course-page.pug
+++ b/src/views/pages/course-page.pug
@@ -20,7 +20,7 @@ block content
 							| <img src="img/course-page--1.png", alt="">Задача организации, в особенности же постоянное информационно-пропагандистское обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям. Равным образом консультация с широким активом влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. С другой стороны консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании форм развития. Товарищи! рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий. <br><br>
 							| Не следует, однако забывать, что дальнейшее развитие различных форм деятельности требуют от нас анализа направлений прогрессивного развития. Идейные соображения высшего порядка, а также укрепление и развитие структуры позволяет выполнять важные задания по разработке соответствующий условий активизации. Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Товарищи! новая модель организационной деятельностив значительной степени обуславливает создание существенных финансовыхи административных условий. Не следует, однако забывать, что дальнейшее развитие различных форм деятельности влечет за собой процесс внедрения и модернизации систем массового участия.<br><br>
 							| Повседневная практика показывает, что реализация намеченных плановых заданий играет важную роль в формировании позиций, занимаемых участниками в отношении поставленных задач. С другой стороны новая модель организационной деятельности играет важную роль в формировании дальнейших направлений развития. Значимость этих проблем настолько очевидна, что консультация с широким активом в значительной степени обуславливает создание позиций, занимаемых участниками в отношении поставленных задач<br><br>
-		
+
 				.block-text.no-margin
 					.text-two.fz__15
 						p
@@ -38,14 +38,14 @@ block content
 								form
 										.form__block__wrap
 												.form__block-double
-														.form__block 
+														.form__block
 																label(for="")
 																		b
-																		input(type="text" placeholder="Фамилия")                 
-														.form__block 
+																		input(type="text" placeholder="Фамилия")
+														.form__block
 																label(for="")
 																		b
-																		input.js-mask-phone(type="tel", name="" placeholder="Ваш телефон")                 
+																		input.js-mask-phone(type="tel", name="" placeholder="Ваш телефон")
 												.form__block.form__block--assent
 														<label class="form__block--checkbox">
 																<input type="checkbox" checked="checked">
@@ -70,11 +70,11 @@ block content
 								img.video-reviews__preview(src='img/text-video--1.png', srcset='./img/text-video--1.png 2x', alt='')
 								.video-reviews__play
 									img(src='img/svg/i-play-2.svg', alt="")
-		
+
 
 
 		section.block-content.bg--white
-			.container 
+			.container
 				.course-page--slider
 					.slider-duble--title.fz__39 КАК ПРОХОДИТ ОБУЧЕНИЕ
 					.swiper.slider-duble.js--course-page
@@ -82,7 +82,7 @@ block content
 								.swiper-slide
 									.slide-picture
 										img.slide-picture__preview(src='img/course-page--3.png', srcset='./img/course-page--3.png 2x', alt='')
-								
+
 								.swiper-slide
 									a.video-reviews__video(href='https://www.youtube.com/watch?v=tEPB7uzKuh4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0')
 										img.video-reviews__preview(src='img/course-page--7.png', srcset='./img/course-page--7.png 2x', alt='')
@@ -91,17 +91,17 @@ block content
 								.swiper-slide
 									.slide-picture
 										img.slide-picture__preview(src='img/course-page--1.png', srcset='./img/course-page--1.png 2x', alt='')
-								
-								
+
+
 								.swiper-slide
 									.slide-picture
 										img.slide-picture__preview(src='img/course-page--2.png', srcset='./img/course-page--2.png 2x', alt='')
-								
+
 								.swiper-slide
 									.slide-picture
 										img.slide-picture__preview(src='img/training--3.png', srcset='./img/training--3.png 2x', alt='')
-								
-								
+
+
 						.swiper-button-next
 							<svg width="11" height="18" viewBox="0 0 11 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M1 17L9 8.99999L0.999999 0.999996" stroke="#CA3232" stroke-width="2" stroke-linecap="round"/>
@@ -112,7 +112,7 @@ block content
 							</svg>
 
 		section.block-content.bg--white
-			.container 
+			.container
 
 				#eventsCalendarTop
 					.fc__top
@@ -474,7 +474,7 @@ block content
 
 
 		section.block-content.bg--white
-			.container 
+			.container
 				.training
 					.slider-four--title.fz__39 ДРУГИЕ КУРСЫ
 					.swiper.slider-four.js--training
@@ -483,13 +483,13 @@ block content
 									a.video-reviews__video(href='#')
 										img.video-reviews__preview(src='img/training--1.png', srcset='./img/training--1.png 2x', alt='')
 									.slider-four--text
-										.slider-four--subtitle 
+										.slider-four--subtitle
 											!="«Безопасность <br>в транспорте»"
 								.swiper-slide
 									a.video-reviews__video(href='#')
 										img.video-reviews__preview(src='img/training--2.png', srcset='./img/training--2.png 2x', alt='')
 									.slider-four--text
-										.slider-four--subtitle 
+										.slider-four--subtitle
 											!="«Тактический<br>травмат»"
 								.swiper-slide
 									a.video-reviews__video(href='#')
@@ -501,13 +501,13 @@ block content
 									a.video-reviews__video(href='#')
 										img.video-reviews__preview(src='img/training--4.png', srcset='./img/training--4.png 2x', alt='')
 									.slider-four--text
-										.slider-four--subtitle 
+										.slider-four--subtitle
 											!="«Основы <br>доврачебной помощи»"
 								.swiper-slide
 									a.video-reviews__video(href='#')
 										img.video-reviews__preview(src='img/training--2.png', srcset='./img/training--2.png 2x', alt='')
 									.slider-four--text
-										.slider-four--subtitle 
+										.slider-four--subtitle
 											!="«Тактический<br>травмат»"
 								.swiper-slide
 									a.video-reviews__video(href='#')
@@ -519,7 +519,7 @@ block content
 									a.video-reviews__video(href='#')
 										img.video-reviews__preview(src='img/training--4.png', srcset='./img/training--4.png 2x', alt='')
 									.slider-four--text
-										.slider-four--subtitle 
+										.slider-four--subtitle
 											!="«Основы <br>доврачебной помощи»"
 						.swiper-button-next
 							<svg width="11" height="18" viewBox="0 0 11 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -529,18 +529,18 @@ block content
 							<svg width="11" height="18" viewBox="0 0 11 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M10 1L2 9.00001L10 17" stroke="#CA3232" stroke-width="2" stroke-linecap="round"/>
 							</svg>
-		
-		
+
+
 		section#dialog-content.block-content.bg--white.calendar--modal(style='display: none')
-			.calendar__window--close
+			.calendar__window--close(data-fancybox-close)
 				<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path d="M23 23L1 1M1 23L23 1" stroke="#CA3232" stroke-width="2" stroke-linecap="round"/>
 				</svg>
-			.container 
+			.container
 				.calendar__window
 					.calendar__window--picture
 						img(src="img/calendar--modal--1.png", alt="")
-					.calendar__window__card 
+					.calendar__window__card
 						.calendar__window__card--title
 							.calendar__window__card--date 30 АПРЕЛЯ
 							.calendar__window__card--time 15:00
@@ -550,7 +550,7 @@ block content
 					a(href="").calendar__window--button.button ЗАПИСАТЬСЯ
 
 
-						
+
 
 	include ../../blocks/modules/footer/footer
 
